Minor edits.